objects/Project_Issue__c/Project_Issue__c.object-meta.xml
<CustomObject>
    <label>Project Issue</label>
    <nameField>
        <label>Project Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>