objects/Project_Issue__c/fields/Magnitude__c.field-meta.xml
<CustomField>
    <fullName>Magnitude__c</fullName>
    <inlineHelpText>What is the magnitude of this issue?  Select &quot;High&quot; if it is a show-stopper.  Select &quot;Medium&quot; if it is an issue, but a work around exists.  Select &quot;Low&quot; if it is a nice-to-have.</inlineHelpText>
    <label>Magnitude</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>